Bug 86633 - Paragraph Format Dialog for text in a textshape contains "area" & "transparency" tabs but these can't be clicked
Summary: Paragraph Format Dialog for text in a textshape contains "area" & "transparen...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha2
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.5.0 target:4.4.0 target:4.4....
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2014-11-23 17:14 UTC by riesslibo
Modified: 2014-11-24 21:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot with paragraph formating dialog (18.30 KB, image/png)
2014-11-23 17:14 UTC, riesslibo
Details
example odt with textshape (9.47 KB, application/vnd.oasis.opendocument.text)
2014-11-23 17:15 UTC, riesslibo
Details
screenshot with paragraph formating dialog (56.84 KB, image/jpeg)
2014-11-23 17:37 UTC, riesslibo
Details
terminal output (lo-linux-dbgutil-daily) (19.83 KB, text/plain)
2014-11-24 05:35 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description riesslibo 2014-11-23 17:14:47 UTC
Created attachment 109905 [details]
screenshot with paragraph formating dialog

Reproduction:

1) Open the atached odt
2) double click in the text of the Textshape
3) click at the paragraph format icon in the menu bar
4) see the dialog window with tabs for changing format of the paragraph formats
5) you see tabs for "Einzug..", "Ausrichtung", "Tabulator", "Area", "Transparency"
(see the attached screenshot) 
6) click on Area and Transparency aren't working

Expexted behavior:
By click on Area and Transparency the same issues as in a text paragraph in a normal text OR no Tab fpr Area and Transparency ;-)
Comment 1 riesslibo 2014-11-23 17:15:26 UTC
Created attachment 109906 [details]
example odt with textshape
Comment 2 riesslibo 2014-11-23 17:37:16 UTC
Created attachment 109907 [details]
screenshot with paragraph formating dialog

screenshot now in jpg Format ;-)
Comment 3 Cor Nouws 2014-11-23 18:59:50 UTC
Interesting, just looked in 4.3.4.1 and the tabs are not available there. Seems to be related.
Thanks Lothar (leaving train now, so no time to check in 4.4.0.x)
Comment 4 Cor Nouws 2014-11-23 21:18:42 UTC
confirmed on 4.4.0beta1
Comment 5 Adolfo Jayme Barrientos 2014-11-24 03:29:54 UTC
Confirmed the issue as well. The tabs are present but can’t be clicked: if you try, the first tab will be activated instead.
Comment 6 Kevin Suo 2014-11-24 05:35:20 UTC
Created attachment 109921 [details]
terminal output (lo-linux-dbgutil-daily)

Reproducible with lo-linux-dbgutil-daily updated today. Attached is the terminal output, following these steps:

1. Start ./opt/program/swriter;
2. Draw a shape;
3. Double-click on the shape, then type some text;
4. Right-click -> Paragraph.

In line 179 of the terminal output file, it shows:
warn:legacy.tools:5769:1:sfx2/source/dialog/tabdlg.cxx:554: not all pages registered

This warning may be related to this issue.
Comment 7 Kevin Suo 2014-11-24 05:50:50 UTC
bisecting using lo-linux-dbgutil-daily, I got the following result:
 e4b0a61cedc6ac0e65a4a110fd83edd8295f4856 is the first bad commit

suokunlong@git:/lo/lo-linux-dbgutil-daily$ git bisect log
# bad: [9acf7e68e5be6c21605b9a9755f278b9a4e70dcf] 2014-11-24: source-hash-8028b428d35f124aaaf02491b95d08a5713e8b34
# good: [b3130c846de5cf1b4be48b48dfc780bb369549fa] 2014-05-21
git bisect start 'master' 'oldest'
# bad: [956bf6473b90f78d8bf99563bef6356d8ae82203] 2014-11-21: source-hash-061e80fb866d7d6b2a7348ed6eb1852835857ec4
git bisect bad 956bf6473b90f78d8bf99563bef6356d8ae82203
# bad: [e4b0a61cedc6ac0e65a4a110fd83edd8295f4856] 2014-11-20: source-hash-d273a60bfdbf9bb7623bed38667ec0647753157c
git bisect bad e4b0a61cedc6ac0e65a4a110fd83edd8295f4856
Comment 8 Kevin Suo 2014-11-24 06:21:30 UTC
Bisected using 44alpha2-only:
 db39c7aad664b60c46f31289f79b3b58b0800a1d is the first bad commit
commit db39c7aad664b60c46f31289f79b3b58b0800a1d
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sat Oct 18 07:12:11 2014 +0000

    source-hash-a7e1ffc248bed431693c6d50c02e7c936c67f360
    
    commit a7e1ffc248bed431693c6d50c02e7c936c67f360
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Tue Jul 1 15:50:28 2014 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Tue Jul 1 16:43:06 2014 +0100
    
        coverity#706988 Uncaught exception
    
        and
    
        coverity#706989 Uncaught exception
    
        Change-Id: I426ae26f69311effd60c0b60b7f4d677a2e35c80


suokunlong@KevinVirtualBox:~/lo/bisect/bibisect-44alpha2only$ git bisect log
# bad: [0777cd085a7633a48e03d25948cc67fce87b7ac7] source-hash-b800d0b6ad74ce4a9adb23b865dd174d1eefa47b
# good: [812c4a492375ac47b3557fbb32f5637fc89d60d9] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474
git bisect start 'latest' 'oldest'
# bad: [8677ba6e74a774fb44ec7831f14e53d8663f59ed] source-hash-eb213e490d9a366477b921d1a408d85c4638499e
git bisect bad 8677ba6e74a774fb44ec7831f14e53d8663f59ed
# bad: [42455e7bcd46db5523f7f8e1931bbd0bd4b51cfc] source-hash-b5608fd429790a3d1153341b2c86303b7090b15a
git bisect bad 42455e7bcd46db5523f7f8e1931bbd0bd4b51cfc
# good: [253e662b25e57508dbc46753f0f28af36d5f4e25] source-hash-f7d51f43deda5e28df63f1b8e168e84838d0d0b4
git bisect good 253e662b25e57508dbc46753f0f28af36d5f4e25
# good: [8461c942c2060278f64283368705e0183709c4d7] source-hash-c7d390bf21623c148ff5c3955561b903d9581da8
git bisect good 8461c942c2060278f64283368705e0183709c4d7
# good: [14dd07abf36b67545552130557c06b3ae1855ff0] source-hash-67c20d42b5ca06458b154356877f4ad5952736f4
git bisect good 14dd07abf36b67545552130557c06b3ae1855ff0
# bad: [db39c7aad664b60c46f31289f79b3b58b0800a1d] source-hash-a7e1ffc248bed431693c6d50c02e7c936c67f360
git bisect bad db39c7aad664b60c46f31289f79b3b58b0800a1d
# good: [afdb28caf97495cd3696588a4ee78647745ed6e7] source-hash-0d55277947fbc2f92fb9fe40dcfa804dc619c37a
git bisect good afdb28caf97495cd3696588a4ee78647745ed6e7
# first bad commit: [db39c7aad664b60c46f31289f79b3b58b0800a1d] source-hash-a7e1ffc248bed431693c6d50c02e7c936c67f360
Comment 9 Michael Stahl 2014-11-24 17:12:58 UTC
some inconsistency with the tab pages for drawing objects caused by:

commit 7d9bb549d498d6beed2c4050c402d09643febdfa
Author:     Armin Le Grand <alg@apache.org>
AuthorDate: Mon Jun 2 15:00:50 2014 +0000
Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
CommitDate: Tue Jul 1 13:30:09 2014 +0200

    Related: #i124638# Second step of DrawingLayer FillAttributes...

fixed on master
Comment 10 Commit Notification 2014-11-24 17:13:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c31a1b5474f5284cf694d04de5734921891915c

fdo#86633: sw: remove bad tab pages from SwParaDlg for drawing objects

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2014-11-24 20:43:21 UTC
libreoffice-4-4 commit is f509e2ec91b138114c43134dd2df3e0b99adcc31
Comment 12 Commit Notification 2014-11-24 21:01:28 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f509e2ec91b138114c43134dd2df3e0b99adcc31&h=libreoffice-4-4

fdo#86633: sw: remove bad tab pages from SwParaDlg for drawing objects

It will be available in 4.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2014-11-24 21:04:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f509e2ec91b138114c43134dd2df3e0b99adcc31&h=libreoffice-4-4

fdo#86633: sw: remove bad tab pages from SwParaDlg for drawing objects

It will be available in 4.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2014-11-24 21:08:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f509e2ec91b138114c43134dd2df3e0b99adcc31&h=libreoffice-4-4

fdo#86633: sw: remove bad tab pages from SwParaDlg for drawing objects

It will be available in 4.4.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Markus Mohrhard 2014-11-24 21:10:34 UTC
Sorry for the spam and the wrong target version.

I fixed the script.