fdo#86633: sw: remove bad tab pages from SwParaDlg for drawing objects

"Area" and "Transparence" only supported by Writer paragraphs.

(regression from 7d9bb549d498d6beed2c4050c402d09643febdfa)

Change-Id: I732e8d40fdeafaebf219fc7c5ddd53b850d8eca6